--- a/style.css
+++ b/style.css
@@ -5,10 +5,20 @@ body {
 }
 
 .gradient {
-    background: rgb(255,188,255);
-background: linear-gradient(90deg, rgba(255,188,255,1) 0%, rgba(200,226,255,1) 50%, rgba(250,255,160,1) 100%);
+    background: rgb(255,0,181);
+background: linear-gradient(90deg, rgba(255,0,181,1) 0%, rgba(0,224,255,1) 50%, rgba(255,214,0,1) 100%);
+}
+    
+
+.page-header{
+    margin-top:4rem;
+    font-size: 30px;
+    color:black;
+    font-family: 'Amatic SC', cursive;  
 }
 
-.heart{
-    height: 20px;
+.navbar{
+    font-family: 'Amatic SC', cursive;
+    font-size: 1.75rem;
 }
+
