--- a/style.css
+++ b/style.css
@@ -34,6 +34,11 @@ background: linear-gradient(90deg, rgba(255,0,181,1) 0%, rgba(0,224,255,1) 50%, 
     font-size:20px;
 }
 
-.activities{
-    height:30px
+.imagesheight{
+    height: 500px;
 }
+
+.imageswidth{
+    width:500px;
+}
+
